# hpc-project

./: .gitignore  README.md  benchmark.ipynb  dask_analysis.py  nbody_benchmark.py  plot.py  pyproject.toml  runner.py  setup.py  test_runner.py
benchmark_results/: benchmark_results.csv  benchmark_results_quick.csv  speedup_results.csv
nbody_cython/: __init__.py  cProfile_N_1000.txt  cythonfn.c  cythonfn.html  cythonfn.pyx  nbody_cython.py  perf_N_1000.txt  setup.py
nbody_dask/: nbody_dask.py  nbody_dask_optimized.py
nbody_original/: cProfile_N_1000.txt  line-profile_N_1000.lprof  nbody_original.py  nbody_pure_python.py  perf_N_1000.txt
nbody_pytorch/: cProfile_N_1000_rtx1050ti.txt  nbody_pytorch.py
