[project]
name = "nbody-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cython>=3.0.12",
    "line-profiler>=4.2.0",
    "matplotlib>=3.10.0",
    "memory-profiler>=0.61.0",
    "numpy>=2.2.2",
    "psutil>=6.1.1",
    "pylint>=3.3.4",
    "pyqt6>=6.8.1",
    "pytest>=8.3.5",
    "ruff>=0.9.5",
    "setuptools>=75.8.0",
    "snakeviz>=2.2.2",
]
